// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compaction flow (SQLite fixture parity) > dry run computes the exact preview 1`] = `
{
  "archive_bytes_freed": 615,
  "db_bytes_freed": 0,
  "dry_run": true,
  "episodes_created": 2,
  "floor_scan_id": "2026-01-08T06:00:00Z",
  "floor_ts": "2026-01-08T06:00:00Z",
  "no_op": false,
  "observations_pruned": 5,
  "scans_sealed": 2,
}
`;

exports[`compaction flow (SQLite fixture parity) > real run seals, converts episodes, and keeps the checkpoint faithful > after_compact:episodes 1`] = `
[
  {
    "cve": "CVE-B",
    "epss": null,
    "first_seen": "2025-12-01T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2025-12-30T12:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "superseded_by_scan": null,
    "tags_json": null,
    "vuln_key": "id:B",
  },
  {
    "cve": "CVE-D",
    "epss": null,
    "first_seen": "2026-01-02T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-01-05T00:00:00Z",
    "risk_observed_at": null,
    "severity": "MEDIUM",
    "superseded_by_scan": null,
    "tags_json": null,
    "vuln_key": "id:D",
  },
]
`;

exports[`compaction flow (SQLite fixture parity) > real run seals, converts episodes, and keeps the checkpoint faithful > after_compact:ledger 1`] = `
{
  "id:A": {
    "asset_id": "vm-a",
    "asset_name": "vm-a-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-A",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-20T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-05-28T00:00:00Z",
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:A",
  },
  "id:C": {
    "asset_id": "vm-c",
    "asset_name": "vm-c-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-C",
    "epss": null,
    "first_scan_id": "2026-01-08T06:00:00Z",
    "first_seen": "2026-01-08T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-15T06:00:00Z",
    "last_seen": "2026-06-15T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:C",
  },
  "id:E": {
    "asset_id": "vm-e",
    "asset_name": "vm-e-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-E",
    "epss": null,
    "first_scan_id": "2026-06-15T06:00:00Z",
    "first_seen": "2026-06-15T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-15T06:00:00Z",
    "last_seen": "2026-06-15T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:E",
  },
}
`;

exports[`compaction flow (SQLite fixture parity) > real run seals, converts episodes, and keeps the checkpoint faithful > after_compact:scans 1`] = `
[
  {
    "mode": "live",
    "new_count": 2,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-01-01T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 2,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-01-08T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 0,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-06-01T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 1,
    "reopened_count": 0,
    "resolved_count": 0,
    "scan_id": "2026-06-15T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-06-15T06:00:00Z",
  },
]
`;

exports[`compaction flow (SQLite fixture parity) > real run seals, converts episodes, and keeps the checkpoint faithful > after_delete_s3:episodes 1`] = `
[
  {
    "cve": "CVE-B",
    "epss": null,
    "first_seen": "2025-12-01T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2025-12-30T12:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "superseded_by_scan": null,
    "tags_json": null,
    "vuln_key": "id:B",
  },
  {
    "cve": "CVE-D",
    "epss": null,
    "first_seen": "2026-01-02T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-01-05T00:00:00Z",
    "risk_observed_at": null,
    "severity": "MEDIUM",
    "superseded_by_scan": null,
    "tags_json": null,
    "vuln_key": "id:D",
  },
]
`;

exports[`compaction flow (SQLite fixture parity) > real run seals, converts episodes, and keeps the checkpoint faithful > after_delete_s3:ledger 1`] = `
{
  "id:A": {
    "asset_id": "vm-a",
    "asset_name": "vm-a-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-A",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-20T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-08T06:00:00Z",
    "last_seen": "2026-01-08T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "disappeared",
    "resolved_at": "2026-06-15T06:00:00Z",
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:A",
  },
  "id:C": {
    "asset_id": "vm-c",
    "asset_name": "vm-c-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-C",
    "epss": null,
    "first_scan_id": "2026-01-08T06:00:00Z",
    "first_seen": "2026-01-08T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-15T06:00:00Z",
    "last_seen": "2026-06-15T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:C",
  },
  "id:E": {
    "asset_id": "vm-e",
    "asset_name": "vm-e-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-E",
    "epss": null,
    "first_scan_id": "2026-06-15T06:00:00Z",
    "first_seen": "2026-06-15T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-15T06:00:00Z",
    "last_seen": "2026-06-15T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:E",
  },
}
`;

exports[`compaction flow (SQLite fixture parity) > real run seals, converts episodes, and keeps the checkpoint faithful > after_delete_s3:observations 1`] = `
[
  {
    "present": 0,
    "scan_id": "2026-06-15T06:00:00Z",
    "severity": "CRITICAL",
    "status": "RESOLVED",
    "vuln_key": "id:A",
  },
  {
    "present": 1,
    "scan_id": "2026-06-15T06:00:00Z",
    "severity": "HIGH",
    "status": "OPEN",
    "vuln_key": "id:C",
  },
  {
    "present": 1,
    "scan_id": "2026-06-15T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:E",
  },
]
`;

exports[`compaction flow (SQLite fixture parity) > real run seals, converts episodes, and keeps the checkpoint faithful > after_delete_s3:scans 1`] = `
[
  {
    "mode": "live",
    "new_count": 2,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-01-01T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 2,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-01-08T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 1,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-06-15T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-06-15T06:00:00Z",
  },
]
`;

exports[`compaction flow (SQLite fixture parity) > real run seals, converts episodes, and keeps the checkpoint faithful > checkpoint 1`] = `
{
  "id:A": {
    "asset_id": "vm-a",
    "asset_name": "vm-a-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-A",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-20T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-08T06:00:00Z",
    "last_seen": "2026-01-08T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:A",
  },
  "id:B": {
    "asset_id": "vm-b",
    "asset_name": "vm-b-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-B",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-01T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-01T06:00:00Z",
    "last_seen": "2026-01-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2025-12-30T12:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:B",
  },
  "id:C": {
    "asset_id": "vm-c",
    "asset_name": "vm-c-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-C",
    "epss": null,
    "first_scan_id": "2026-01-08T06:00:00Z",
    "first_seen": "2026-01-08T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-08T06:00:00Z",
    "last_seen": "2026-01-08T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:C",
  },
  "id:D": {
    "asset_id": "vm-d",
    "asset_name": "vm-d-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-D",
    "epss": null,
    "first_scan_id": "2026-01-08T06:00:00Z",
    "first_seen": "2026-01-02T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-08T06:00:00Z",
    "last_seen": "2026-01-08T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-01-05T00:00:00Z",
    "risk_observed_at": null,
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:D",
  },
}
`;

exports[`compaction flow (SQLite fixture parity) > real run seals, converts episodes, and keeps the checkpoint faithful > checkpoint_floor_scan_id 1`] = `"2026-01-08T06:00:00Z"`;

exports[`compaction flow (SQLite fixture parity) > real run seals, converts episodes, and keeps the checkpoint faithful > checkpoint_floor_ts 1`] = `"2026-01-08T06:00:00Z"`;

exports[`compaction flow (SQLite fixture parity) > real run seals, converts episodes, and keeps the checkpoint faithful > delete_s3_result 1`] = `
{
  "deleted": 1,
  "scans": 3,
  "tracked": 5,
}
`;

exports[`compaction flow (SQLite fixture parity) > real run seals, converts episodes, and keeps the checkpoint faithful > real_result 1`] = `
{
  "dry_run": false,
  "episodes_created": 2,
  "floor_scan_id": "2026-01-08T06:00:00Z",
  "floor_ts": "2026-01-08T06:00:00Z",
  "no_op": false,
  "observations_pruned": 5,
  "scans_sealed": 2,
}
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_delete:episodes 1`] = `[]`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_delete:ledger 1`] = `
{
  "id:A": {
    "asset_id": "vm-a",
    "asset_name": "vm-a-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-A",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-20T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-05-28T00:00:00Z",
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:A",
  },
  "id:B": {
    "asset_id": "vm-b",
    "asset_name": "vm-b-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-B",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-01T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-01T06:00:00Z",
    "last_seen": "2026-01-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2025-12-30T12:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:B",
  },
  "id:C": {
    "asset_id": "vm-c",
    "asset_name": "vm-c-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-C",
    "epss": null,
    "first_scan_id": "2026-06-01T06:00:00Z",
    "first_seen": "2026-06-01T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-15T06:00:00Z",
    "last_seen": "2026-06-15T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:C",
  },
  "id:E": {
    "asset_id": "vm-e",
    "asset_name": "vm-e-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-E",
    "epss": null,
    "first_scan_id": "2026-06-15T06:00:00Z",
    "first_seen": "2026-06-15T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-15T06:00:00Z",
    "last_seen": "2026-06-15T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:E",
  },
}
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_delete:observations 1`] = `
[
  {
    "present": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:A",
  },
  {
    "present": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "vuln_key": "id:B",
  },
  {
    "present": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "severity": "CRITICAL",
    "status": "RESOLVED",
    "vuln_key": "id:A",
  },
  {
    "present": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "severity": "HIGH",
    "status": "OPEN",
    "vuln_key": "id:C",
  },
  {
    "present": 1,
    "scan_id": "2026-06-15T06:00:00Z",
    "severity": "HIGH",
    "status": "OPEN",
    "vuln_key": "id:C",
  },
  {
    "present": 1,
    "scan_id": "2026-06-15T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:E",
  },
]
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_delete:scans 1`] = `
[
  {
    "mode": "live",
    "new_count": 2,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-01-01T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 1,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-06-01T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 1,
    "reopened_count": 0,
    "resolved_count": 0,
    "scan_id": "2026-06-15T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-06-15T06:00:00Z",
  },
]
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan1:episodes 1`] = `[]`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan1:ledger 1`] = `
{
  "id:A": {
    "asset_id": "vm-a",
    "asset_name": "vm-a-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-A",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-20T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-01T06:00:00Z",
    "last_seen": "2026-01-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:A",
  },
  "id:B": {
    "asset_id": "vm-b",
    "asset_name": "vm-b-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-B",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-01T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-01T06:00:00Z",
    "last_seen": "2026-01-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2025-12-30T12:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:B",
  },
}
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan1:observations 1`] = `
[
  {
    "present": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:A",
  },
  {
    "present": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "vuln_key": "id:B",
  },
]
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan1:scans 1`] = `
[
  {
    "mode": "live",
    "new_count": 2,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-01-01T06:00:00Z",
  },
]
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan2:episodes 1`] = `[]`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan2:ledger 1`] = `
{
  "id:A": {
    "asset_id": "vm-a",
    "asset_name": "vm-a-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-A",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-20T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-08T06:00:00Z",
    "last_seen": "2026-01-08T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:A",
  },
  "id:B": {
    "asset_id": "vm-b",
    "asset_name": "vm-b-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-B",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-01T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-01T06:00:00Z",
    "last_seen": "2026-01-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2025-12-30T12:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:B",
  },
  "id:C": {
    "asset_id": "vm-c",
    "asset_name": "vm-c-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-C",
    "epss": null,
    "first_scan_id": "2026-01-08T06:00:00Z",
    "first_seen": "2026-01-08T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-08T06:00:00Z",
    "last_seen": "2026-01-08T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:C",
  },
  "id:D": {
    "asset_id": "vm-d",
    "asset_name": "vm-d-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-D",
    "epss": null,
    "first_scan_id": "2026-01-08T06:00:00Z",
    "first_seen": "2026-01-02T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-08T06:00:00Z",
    "last_seen": "2026-01-08T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-01-05T00:00:00Z",
    "risk_observed_at": null,
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:D",
  },
}
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan2:observations 1`] = `
[
  {
    "present": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:A",
  },
  {
    "present": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "vuln_key": "id:B",
  },
  {
    "present": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:A",
  },
  {
    "present": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "severity": "HIGH",
    "status": "OPEN",
    "vuln_key": "id:C",
  },
  {
    "present": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "vuln_key": "id:D",
  },
]
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan2:scans 1`] = `
[
  {
    "mode": "live",
    "new_count": 2,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-01-01T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 2,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-01-08T06:00:00Z",
  },
]
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan3:episodes 1`] = `[]`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan3:ledger 1`] = `
{
  "id:A": {
    "asset_id": "vm-a",
    "asset_name": "vm-a-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-A",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-20T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-05-28T00:00:00Z",
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:A",
  },
  "id:B": {
    "asset_id": "vm-b",
    "asset_name": "vm-b-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-B",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-01T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-01T06:00:00Z",
    "last_seen": "2026-01-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2025-12-30T12:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:B",
  },
  "id:C": {
    "asset_id": "vm-c",
    "asset_name": "vm-c-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-C",
    "epss": null,
    "first_scan_id": "2026-01-08T06:00:00Z",
    "first_seen": "2026-01-08T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:C",
  },
  "id:D": {
    "asset_id": "vm-d",
    "asset_name": "vm-d-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-D",
    "epss": null,
    "first_scan_id": "2026-01-08T06:00:00Z",
    "first_seen": "2026-01-02T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-08T06:00:00Z",
    "last_seen": "2026-01-08T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-01-05T00:00:00Z",
    "risk_observed_at": null,
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:D",
  },
}
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan3:observations 1`] = `
[
  {
    "present": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:A",
  },
  {
    "present": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "vuln_key": "id:B",
  },
  {
    "present": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:A",
  },
  {
    "present": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "severity": "HIGH",
    "status": "OPEN",
    "vuln_key": "id:C",
  },
  {
    "present": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "vuln_key": "id:D",
  },
  {
    "present": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "severity": "CRITICAL",
    "status": "RESOLVED",
    "vuln_key": "id:A",
  },
  {
    "present": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "severity": "HIGH",
    "status": "OPEN",
    "vuln_key": "id:C",
  },
]
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan3:scans 1`] = `
[
  {
    "mode": "live",
    "new_count": 2,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-01-01T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 2,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-01-08T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 0,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-06-01T06:00:00Z",
  },
]
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan4:episodes 1`] = `[]`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan4:ledger 1`] = `
{
  "id:A": {
    "asset_id": "vm-a",
    "asset_name": "vm-a-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-A",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-20T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-01T06:00:00Z",
    "last_seen": "2026-06-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-05-28T00:00:00Z",
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:A",
  },
  "id:B": {
    "asset_id": "vm-b",
    "asset_name": "vm-b-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-B",
    "epss": null,
    "first_scan_id": "2026-01-01T06:00:00Z",
    "first_seen": "2025-12-01T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-01T06:00:00Z",
    "last_seen": "2026-01-01T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2025-12-30T12:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:B",
  },
  "id:C": {
    "asset_id": "vm-c",
    "asset_name": "vm-c-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-C",
    "epss": null,
    "first_scan_id": "2026-01-08T06:00:00Z",
    "first_seen": "2026-01-08T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-15T06:00:00Z",
    "last_seen": "2026-06-15T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:C",
  },
  "id:D": {
    "asset_id": "vm-d",
    "asset_name": "vm-d-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-D",
    "epss": null,
    "first_scan_id": "2026-01-08T06:00:00Z",
    "first_seen": "2026-01-02T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-08T06:00:00Z",
    "last_seen": "2026-01-08T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-01-05T00:00:00Z",
    "risk_observed_at": null,
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:D",
  },
  "id:E": {
    "asset_id": "vm-e",
    "asset_name": "vm-e-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-E",
    "epss": null,
    "first_scan_id": "2026-06-15T06:00:00Z",
    "first_seen": "2026-06-15T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-15T06:00:00Z",
    "last_seen": "2026-06-15T06:00:00Z",
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:E",
  },
}
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan4:observations 1`] = `
[
  {
    "present": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:A",
  },
  {
    "present": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "severity": "HIGH",
    "status": "RESOLVED",
    "vuln_key": "id:B",
  },
  {
    "present": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:A",
  },
  {
    "present": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "severity": "HIGH",
    "status": "OPEN",
    "vuln_key": "id:C",
  },
  {
    "present": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "vuln_key": "id:D",
  },
  {
    "present": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "severity": "CRITICAL",
    "status": "RESOLVED",
    "vuln_key": "id:A",
  },
  {
    "present": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "severity": "HIGH",
    "status": "OPEN",
    "vuln_key": "id:C",
  },
  {
    "present": 1,
    "scan_id": "2026-06-15T06:00:00Z",
    "severity": "HIGH",
    "status": "OPEN",
    "vuln_key": "id:C",
  },
  {
    "present": 1,
    "scan_id": "2026-06-15T06:00:00Z",
    "severity": "CRITICAL",
    "status": "OPEN",
    "vuln_key": "id:E",
  },
]
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > after_scan4:scans 1`] = `
[
  {
    "mode": "live",
    "new_count": 2,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-01T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-01-01T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 2,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-08T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-01-08T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 0,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-06-01T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-06-01T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 1,
    "reopened_count": 0,
    "resolved_count": 0,
    "scan_id": "2026-06-15T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-06-15T06:00:00Z",
  },
]
`;

exports[`ledger flow (SQLite fixture parity) > persist x4 then delete s2 reproduces every table state > delete_result 1`] = `
{
  "deleted": 1,
  "scans": 3,
  "tracked": 4,
}
`;
